# Naples-GW-Back

./: .gitignore  Dockerfile  GODADDY_DOMAIN_SETUP.md  alembic.ini  database-test.sqlite3-journal  docker-compose.prod.yaml  docker-compose.staging.yaml  docker-compose.yml  project.env  pyproject.toml  start_api.sh  version
.github/workflows/: build_deploy.yaml  build_deploy_prod.yaml  build_deploy_staging copy.yaml  build_deploy_staging.yaml  notifications_push_branch_dev.yaml  test.yaml
data/: test_data.json  test_uscities.csv
migrations/: env.py
migrations/versions/: 0188e84a1158_fees_table.py  02462e974330_add_to_store_is_protected.py  04081df46c7d_deleted_urls_from_user.py  0552439ca80f_contact_request.py  0d0817e87fe6_add_link_and_items_links.py  14a571f23eda_to_subscription_add_checked_date_and_.py  16234029ca29_.py  16234029ca29_to_item_add_price.py  175bd95f6cb6_add_to_bookedate_from_and_to_dates.py  1c8fbdc9b3b7_add_first_and_last_name_to_user.py  1fc325a4be63_user.py  2a9bc42db753_add_model_admincontactrequest.py  2ae68534218d_about_us_description.py  2ecdc9c4f4c4_init.py  2f264434d9f6_.py  2ff3cfe1008c_deleted_billing.py  31ddbddf3039_add_model_subscription.py  322a82391200_to_store_add_phone.py  347875a3a2da_store_logo.py  3553894acd3c_booked_dates.py  37e7beb1d943_modify_product.py  38f50f63f088_add_metadata.py  392319adca4a_.py  394dd6f45ab3_member_title.py  3add4a4731f8_init.py  3edb66558cc2_to_subscription_add_amount.py  41cf0cafd528_add_to_product_count_of_items_and_.py  434f8af73a20_item_adults.py  44448a38efea_.py  4749a6ecd8e2_user_add_is_blocked.py  4c9f6b97606a_add_to_user_avatar.py  4d1eb631d8bd_uuid_default_and_unique.py  4d2e85e8c80f_.py  4fe32f882afb_to_subscription_cancel_at.py  5cfa19d45681_.py  (+60 more)
naples/: __init__.py  config.py  database.py  logger.py  main.py  oauth2.py  utils.py
reports/: stores_report.csv
services/: __init__.py  create_test_data.py  export_usa_locations.py
tasks/: __init__.py  create_admin.py  create_metadata.py  fill_db_locations.py  fill_db_newyork_locations.py  fill_db_staging_data.py  fill_db_stripe_products.py  shell_init.py
tests/: conftest.py  test.env  test_admin_contact_requests.py  test_amenities.py  test_auth.py  test_billing.py  test_booked_dates.py  test_contact_requests.py  test_data.json  test_data.py  test_fees.py  test_floor_plans.py  test_item.py  test_locations.py  test_members.py  test_metadata.py  test_products.py  test_rates.py  test_stores.py  test_users.py
(+97 files in other folders)
